<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/my_return_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"
        >

        <TableRow android:weightSum="3">

            <LinearLayout
                style="@style/my_profit_text_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/my_return_subject_name"
                    style="@style/my_profit_text_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/my_profit_text_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/my_return_modify"
                    style="@style/my_profit_text_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify" />
            </LinearLayout>

            <LinearLayout
                style="@style/my_profit_text_layout"
                android:layout_width="100dp">

                <TextView
                    android:id="@+id/my_return_remove"
                    style="@style/my_profit_text_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove" />
            </LinearLayout>
        </TableRow>

        <TableRow android:weightSum="3">

            <LinearLayout
                style="@style/my_profit_text_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/my_profit_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_price" />

                <TextView
                    android:id="@+id/my_return_buy_price"
                    style="@style/my_profit_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/my_profit_text_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/my_profit_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_count" />

                <TextView
                    android:id="@+id/my_return_buy_count"
                    style="@style/my_profit_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/my_profit_text_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/my_profit_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_buy_price" />

                <TextView
                    android:id="@+id/my_return_total_buy_price"
                    style="@style/my_profit_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </TableRow>

        <TableRow android:weightSum="3">

            <LinearLayout
                style="@style/my_profit_text_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/my_profit_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holding_period" />

                <TextView
                    style="@style/my_profit_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/my_profit_text_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/my_profit_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profit_ratio" />

                <TextView
                    android:id="@+id/my_return_profit_ratio"
                    style="@style/my_profit_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/my_profit_text_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/my_profit_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profit_price" />

                <TextView
                    android:id="@+id/my_return_profit_price"
                    style="@style/my_profit_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/my_return_input_buy"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/input_buy"
         />
</RelativeLayout>
