<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/home_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/home_toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <include layout="@layout/nav_header_1" />
                <include layout="@layout/nav_header_2" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:id="@+id/home_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/home_appbar">

            <com.wds.king.trader.ui.layout.FullDrawerLayout
                android:id="@+id/home_drawer_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:openDrawer="start">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:id="@+id/home_container_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/home_navigation_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:background="@android:color/white">

                    <include layout="@layout/nav_menu_1" />
                    <include layout="@layout/nav_menu_2" />
                </RelativeLayout>

            </com.wds.king.trader.ui.layout.FullDrawerLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/home_tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TableRow>
                        <TextView
                            android:id="@+id/home_edit_subject"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/home_edit_subject" />

                        <TextView
                            android:id="@+id/home_add_subject"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/home_add_subject" />

                        <TextView
                            android:id="@+id/home_sort_subject"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/home_sort_subject" />
                    </TableRow>

                </TableLayout>

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/home_tab_layout" />
            </RelativeLayout>
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>
